--- a/tsc-basic-all-parts/package.json
+++ b/tsc-basic-all-parts/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node src/sendRequest.ts"
+    "test": "ts-node src/unionsExercise.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "pino": "^9.6.0"
   }
 }
